Updated Letter Content & Date Alignment Fixed.

--- a/style.css
+++ b/style.css
@@ -47,19 +47,20 @@ body {
     display: none;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    padding: 20px;
     box-sizing: border-box;
     flex-direction: column;
     z-index: 100;
     background-image: linear-gradient(to right, #74c6d1 1px, transparent 1px),
         linear-gradient(to bottom, #74c6d1 1px, transparent 1px);
     background-size: 125px 60px;
+    padding-top: 0px;
 }
 
 #letter {
-    font-size: 1.1rem;
-    line-height: 2.5rem;
-    max-width: 80vw;
+    font-size: 1rem;
+    line-height: 2rem;
+    /* max-width: 80vw; */
     white-space: pre-wrap;
     border-left: 3px solid #74c6d1;
     padding-left: 15px;
@@ -71,7 +72,7 @@ body {
 
 #date1 {
     position: absolute;
-    top: 40px;
+    top: 20px;
     left: 20px;
     font-weight: bold;
     font-family: "Gloria Hallelujah", cursive;
@@ -80,7 +81,7 @@ body {
 
 #date2 {
     position: absolute;
-    top: 60px;
+    top: 40px;
     left: 20px;
     font-weight: bold;
     font-family: "Gloria Hallelujah", cursive;
@@ -92,6 +93,20 @@ body {
     position: absolute;
     top: 20px;
     right: 20px;
+    background: #74c6d1;
+    padding: 8px 14px;
+    cursor: pointer;
+    font-weight: bold;
+    border: none;
+    border-radius: 20px;
+    font-family: "Gloria Hallelujah", cursive;
+}
+
+/* Restart button */
+#restart-btn {
+    position: absolute;
+    top: 20px;
+    right: 120px;
     background: #74c6d1;
     padding: 8px 14px;
     cursor: pointer;
@@ -115,6 +130,11 @@ body {
     border: none;
     border-radius: 20px;
     box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.3);
+
+    #ps-text,
+    #name-text {
+        font-size: 0.8rem;
+    }
 }
 
 @media screen and (min-width: 340px) and (max-width: 1000px) {
